Finished draft of hotspot tuning